--- a/deploy.yml
+++ b/deploy.yml
@@ -1,21 +1,17 @@
 ---
-- name : Configure Docker on EC2 Instances
-  hosts : all
+- hosts: all
   become: true
-  connection : ssh
-  tasks : 
-  - name: updating apt
-    command : sudo apt-get update
-
-  - name : Install Docker
-    command : sudo apt-get install -y docker.io
-    become : yes
-    become_user : root
-
-  - name : Start Docker Service
-    command : sudo systemctl start docker
-    become : yes
-    become_user : root
-
-  - name: Deploy Docker Container
+  tasks:
+  - name: Install Docker
+    apt: name=docker.io state=present
+  - name: Start Docker Service
+    command: sudo systemctl start docker
+    become: yes
+    become_user: root
+  - name: docker run user
+    shell: usermod -a -G docker ubuntu
+  - name: check the docker version
+    command: "docker version"
+    register: docversion
+  - name: Deploy you application and run as container
     command: docker run -itd -p 8084:8081 mandarapujahnavi/insureme-app:1.0
